@@ -125,11 +125,15 @@ public class TimelineDelegationTokenSecretManagerService extends
 
     /**
      * Create a timeline secret manager
-     *
-     * @param delegationKeyUpdateInterval the number of seconds for rolling new secret keys.
-     * @param delegationTokenMaxLifetime the maximum lifetime of the delegation tokens
+     * @param delegationKeyUpdateInterval the number of milliseconds for rolling
+     *        new secret keys.
+     * @param delegationTokenMaxLifetime the maximum lifetime of the delegation
+     *        tokens in milliseconds
      * @param delegationTokenRenewInterval how often the tokens must be renewed
-     * @param delegationTokenRemoverScanInterval how often the tokens are scanned for expired tokens
+     *        in milliseconds
+     * @param delegationTokenRemoverScanInterval how often the tokens are
+     *        scanned for expired tokens in milliseconds
+     * @param stateStore timeline service state store
      */
     public TimelineDelegationTokenSecretManager(
         long delegationKeyUpdateInterval,
