@@ -56,13 +56,15 @@ public class RMDelegationTokenSecretManager extends
 
   /**
    * Create a secret manager
-   * @param delegationKeyUpdateInterval the number of seconds for rolling new
-   *        secret keys.
+   * @param delegationKeyUpdateInterval the number of milliseconds for rolling
+   *        new secret keys.
    * @param delegationTokenMaxLifetime the maximum lifetime of the delegation
-   *        tokens
+   *        tokens in milliseconds
    * @param delegationTokenRenewInterval how often the tokens must be renewed
+   *        in milliseconds
    * @param delegationTokenRemoverScanInterval how often the tokens are scanned
-   *        for expired tokens
+   *        for expired tokens in milliseconds
+   * @param rmContext current context of the ResourceManager
    */
   public RMDelegationTokenSecretManager(long delegationKeyUpdateInterval,
                                       long delegationTokenMaxLifetime,
